cmake_minimum_required(VERSION 3.13)

# Initialize pico-sdk
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

# Create the library
add_library(ethernet
    ethernet.cpp
)

# Add include directories
target_include_directories(ethernet PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

# Link against pico standard library
target_link_libraries(ethernet
    pico_stdlib
    manchester_nonblock
)

# Enable USB output, disable UART output
pico_enable_stdio_usb(ethernet 1)
pico_enable_stdio_uart(ethernet 0)